--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
@@ -57,10 +57,10 @@
                                       layout="pageDirection"
                                       required="true" requiredMessage="Must choose one of the method to change profile.">
                         <f:selectItem
-                                itemLabel="I prefer to answer each question, so that I can be assigned new portfolio"
+                                itemLabel="I prefer to answer each question, so that I can be recommended new portfolio"
                                 itemValue="Q"/>
                         <f:selectItem
-                                itemLabel="I would like to skip the risk questionnaire process and move forward with transferring my fund."
+                                itemLabel="I would like to skip the risk questionnaire process and move forward with transferring my portfolio."
                                 itemValue="D"/>
                     </p:selectOneRadio>
 
