--- a/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
@@ -102,18 +102,18 @@
                                                                                     <f:setPropertyActionListener value="#{acct}"
                                                                                                                  target="#{cdash.selectedAccount}"/>
                                                                                 </p:commandButton>
-                                                                            </div><div class="Mobilelabel Container60"><h3>Add Funds</h3></div>
+                                                                            </div><div class="Mobilelabel Container60"><h3>Add Money</h3></div>
                                                                             <div class="Container40 IconWidthP">
                                                                                 <p:commandButton id="editBtn"
                                                                                                  styleClass="Fs14 OrangeButton"
                                                                                                  process="@this" immediate="true"
-                                                                                                 icon="fa fa-exchange Fs14 white"
+                                                                                                 icon="fa fa-pie-chart Fs14 white"
                                                                                                  action="#{cdash.doAction('E')}">
                                                                                    <!--   <p:tooltip for="editBtn" value="Exchange fund"/>-->
                                                                                     <f:setPropertyActionListener value="#{acct}"
                                                                                                                  target="#{cdash.selectedAccount}"/>
                                                                                 </p:commandButton>
-                                                                            </div><div class="Mobilelabel Container60"><h3>Exchange Fund</h3></div>
+                                                                            </div><div class="Mobilelabel Container60"><h3>Choose New Portfolio</h3></div>
                                                                             <div class="Container40 IconWidthP">
                                                                                 <p:commandButton id="acctBtn"
                                                                                                  styleClass="Fs14 CyanButton"
