LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
@@ -60,7 +60,9 @@
                                 itemLabel="I prefer to answer each question, so that I can be recommended new portfolio"
                                 itemValue="Q"/>
                         <f:selectItem
-                                itemLabel="I would like to skip the risk questionnaire process and move forward with transferring my portfolio."
+                                itemLabel="I know which portfolio I would like to transfer into.
+                                I would like to skip the risk questionnaire process and move forward with
+                                transferring from the portfolio that I was originally recommended by $ymbil."
                                 itemValue="D"/>
                     </p:selectOneRadio>
 
