--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
@@ -11,7 +11,7 @@
                     <h2>
                         <ui:fragment rendered="#{ceb.isEditMode}">
                             Tolerating losses in some years is part of investing.
-                            Based on your Current investment of #{dataDisplayConverter.displayAsMoney(ceb.investment)},
+                            Based on your current investment of #{dataDisplayConverter.displayAsMoney(ceb.investment)},
                             what is the largest loss you would comfortably tolerate during a 1-year-time-frame?
                         </ui:fragment>
                         <ui:fragment rendered="#{! ceb.isEditMode}">
