--- a/ltam/modules/web/src/main/webapp/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/index.xhtml
@@ -28,8 +28,9 @@
 <div class="layout-portlets-box">
 
    
-        <div class="Container100 Responsive100 ">
-            <div class="ContainerIndent Responsive100 tab_main">
+        <div class="Container100">
+            <div class="UIstepsSevenP">
+            <div class="ContainerIndent">
             		
                             <p:steps id="ltamprogressbar" activeIndex="#{ltamprofile.ltammenu}">
                                 <p:menuitem value="Start"/>
@@ -41,6 +42,7 @@
                                 <p:menuitem value="Review"/>
                             </p:steps>
                           
+           </div>
            </div>
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent Responsive100">
