--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund1.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund1.xhtml
@@ -44,7 +44,7 @@
                         <div class="Wid90">Amount to Add</div>
                         <pe:inputNumber styleClass="ltamInputText input_wid1"
                                         placeholder="Enter $ amount"
-                                        value="$#{fundbean.investment}"
+                                        value="#{fundbean.investment}"
                                         maxlength="11" decimalPlaces="0" symbol="$"
                                         required="true" requiredMessage="Fund amount is required!"
                                         validatorMessage="Min. of $1 investment is required!">
