LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund2.xhtml
@@ -146,6 +146,7 @@
         <div class="Container100 TexAlCenter">
             <p:commandButton value="Previous" styleClass="Fleft" rendered="#{fundbean.pagemanager.prevButtonStat}"
                              update=":fundForm:contentpanel"
+                             immediate="true"
                              actionListener="#{fundbean.prevPage}"/>
             <p:commandButton value="Next" styleClass="Fright" disabled="#{fundbean.acceptterms != 'Y'}"
                              update=":fundForm:contentpanel"
