--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
@@ -75,6 +75,7 @@
             <f:facet name="footer">
                 <p:commandButton styleClass="Fleft" value="Cancel"
                                  update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                 immediate="true"
                                  actionListener="#{ceb.exitPage}"/>
                 <p:commandButton styleClass="Fright" value="Continue"
                                  update=":ceForm:contentpanel,:ceForm:disclaimer"
