--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
@@ -56,6 +56,7 @@
                     <div class="EmptyBox20"></div>
                     <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     immediate="true"
                                      actionListener="#{ceb.prevPage}"/>
                     <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
