--- a/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
@@ -44,7 +44,7 @@
                                             </h4>
                                         </div>
                                         <div class="Container10" style="margin-left: 10px">
-                                            <p:commandButton id="addBtn"
+                                            <p:commandButton id="addBtn"  rendered="false"
                                                              styleClass="Fs14 BlueButton"
                                                              process="@this" immediate="true"
                                                              icon="fa fa-plus Fs14 white"
