--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page2.xhtml
@@ -21,6 +21,7 @@
             <div class="EmptyBox10"></div>
             <p:commandButton styleClass="prev" value="Previous" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      immediate="true"
                                       actionListener="#{ltamprofile.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ltamprofile.pagemanager.nextButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
