--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page5.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page5.xhtml
@@ -49,6 +49,7 @@
         <div class="EmptyBox20"></div>
         <p:commandButton value="Previous" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      immediate="true"
                                       actionListener="#{ltamprofile.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ltamprofile.pagemanager.nextButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
