--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
@@ -24,6 +24,7 @@
                     <div class="EmptyBox10"></div>
                     <p:commandButton styleClass="prev" value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     immediate="true"
                                      actionListener="#{ceb.prevPage}"/>
                     <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
