--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
@@ -50,6 +50,7 @@
 
                     <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     immediate="true"
                                      actionListener="#{ceb.prevPage}"/>
                     <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
