--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page4.xhtml
@@ -109,6 +109,7 @@
                     <div class="tp2"></div>
                     <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                     immediate="true"
                                      actionListener="#{ceb.prevPage}"/>
                     <p:commandButton styleClass="Fright" value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
