--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page4.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page4.xhtml
@@ -100,6 +100,7 @@
         <div class="tp2"></div>
         <p:commandButton value="Previous" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      immediate="true"
                                       actionListener="#{ltamprofile.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ltamprofile.pagemanager.nextButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
