LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1B.xhtml
@@ -45,7 +45,7 @@
                 <div class="EmptyBox10"></div>
 
                 <div class="Fs14 textAlign">
-                    I would like to re-asses my risk. By selecting one of the two options below,
+                    I would like to reasses my risk. By selecting one of the two options below,
                     I understand and acknowledge that I may be moving from the account originally
                     recommended to me by $ymbil
                 </div>
