LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/web/src/main/webapp/pages/consumer/tradeinfo.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/tradeinfo.xhtml
@@ -35,7 +35,7 @@
                             <div class="Container100 TexAlLeft MarLeft10 PaddingblocktradeP">
                                 <p:panelGrid columns="2" layout="grid">
                                     <h:outputText value="Transaction ID" class="textBold"/>
-                                    <h:outputText value="#{tradeinfobean.beanacctnum}"/>
+                                    <h:outputText value="#{tradeinfobean.beantranno}"/>
 
                                     <h:outputText value="Type" class="textBold"/>
                                     <h:outputText value="#{tradeinfobean.beantype}"/>
