UI/UX changes done by Prakash - Fund Account UI Updated

--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/fund3.xhtml
@@ -18,9 +18,9 @@
             </div>
             <div class="EmptyBox40"></div>
             <table class="Container100 Responsive100">
-                <tr style="background: blue; color: #ffffff; font-weight: bold">
+                <tr style="background: #7B7DB3; color: #ffffff; font-weight: bold;padding: 0; height: 29px;">
                     <td class="TexAlCenter" style="width: 75%;">Fund</td>
-                    <td class="TexAlRight" style="width: 25%">Amount</td>
+                    <td class="TexAlRight" style="width: 25%; padding-right: 15px;">Amount</td>
                 </tr>
                 <tr>
                     <td class="TexAlLeft" style="width: 75%">#{fundbean.selectedAccount.securityName}</td>
