--- a/ltam/modules/web/src/main/webapp/pages/consumer/fund.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/fund.xhtml
@@ -18,6 +18,7 @@
                 <div class="layout-portlets-box">
 
                     <div class="Container100 Responsive100">
+                    <div class="fundAccountSteps">
                         <div class="ContainerIndent">
                             <div class="tab_main">
                                 <p:steps activeIndex="#{fundbean.pagemanager.page}">
@@ -26,6 +27,7 @@
                                     <p:menuitem value="Confirm"/>
                                 </p:steps>
                             </div>
+                        </div>
                         </div>
                     </div>
 
@@ -36,6 +38,7 @@
                     </div>
 
                     <div class="Container100">
+                    <div class="fundAccountMainP">
                         <div class="ContainerIndent">
                             <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
                                 <ui:fragment rendered="#{fundbean.pagemanager.page == 0}">
@@ -48,6 +51,7 @@
                                     <ui:include src="/pages/consumer/edit/fund3.xhtml"/>
                                 </ui:fragment>
                             </p:panel>
+                        </div>
                         </div>
                     </div>
                 </div>
