UI/UX changes done by Prakash

--- a/ltam/modules/web/src/main/webapp/pages/try/addon/page1.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/page1.xhtml
@@ -27,7 +27,7 @@
 
         <div class="TexAlCenter">
             <h1>
-                I am <pe:inputNumber styleClass="ltamInputText input_wid1" style="width: 60px;" value="#{ltamprofile.age}"
+                I am <pe:inputNumber styleClass="ltamInputText input_wid1" style="padding:0px!important; width: 60px;" value="#{ltamprofile.age}"
                                      decimalPlaces="0" minValue="0" maxValue="110"
                     required="true" requiredMessage="Age is required!"
                     validatorMessage="Age should be between 18 and 100."/> years old.
@@ -39,7 +39,7 @@
         <div class="TexAlCenter">
             <h1>
             I plan on investing
-            <pe:inputNumber styleClass="ltamInputText input_wid1"
+            <pe:inputNumber styleClass="ltamInputText input_wid1" style="padding:0px!important;"
                           value="#{ltamprofile.investment}"
                           maxlength="11" decimalPlaces="0" symbol="$"
                     required="true" requiredMessage="Investment is required!"
